--- a/dentalsoft/package.json
+++ b/dentalsoft/package.json
@@ -10,20 +10,19 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-
     "bootstrap": "^5.2.2",
     "bootswatch": "^5.2.2",
-    "prop-types": "^15.8.1",
     "firebase": "^9.13.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.1",
     "react-icons": "^4.6.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
-    "react-scripts": "5.0.1",
-    "styled-components": "^5.3.6",
-
+    "react-scripts": "^2.1.3",
+    "styled-components": "^5.3.6"
   },
   "scripts": {
     "start": "react-scripts start",
